# bobu-website

./: .gitignore  404.html  ARCHITECTURE.md  README.md  __next.__PAGE__.txt  __next._tree.txt  _not-found.txt  cv.html  dev_plan.md  ecommerce.html  ecommerce.txt  eslint.config.mjs  index.html  index.txt  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  portfolio.html  portfolio.txt  progetti.html  run_aura.bat  tsconfig.json
.claude/: CLAUDE.md  skills_index.json
BobuOS_Design/: architecture.md  impact_analysis.md  implementation_details.md  overview.md  roadmap.md
_not-found/: __next._head.txt  __next._tree.txt
cv/: __next._full.txt  __next._tree.txt
ecommerce/: __next._tree.txt  collection.html
portfolio/: __next._tree.txt
progetti/: __next._full.txt  __next._tree.txt  abalone.html  abalone.txt  azul.html  bitwise.html  breakout.html  flip-7.html  kalaha.html  kalaha.txt  mastermind.html  mastermind.txt  maze-generator.html  maze-solver.html  maze-solver.txt  pong.html  snake.html  snake.txt  sudoku.html  twin-drift.html
projects/rust-app/: Cargo.toml
setup_temp/: package-lock.json
tests/: AbalonePage.test.tsx  AzulPage.test.tsx  BitwisePage.test.tsx  BobuOSContext.test.tsx  BreakoutPage.test.tsx  CvPage.test.tsx  EcommerceCollectionPage.test.tsx  EcommercePage.test.tsx  Flip7Page.test.tsx  Footer.test.tsx  GameIframe.test.tsx  GameIframePage.test.tsx  GamePageHeader.test.tsx  HomePage.test.tsx  KalahaPage.test.tsx  Layout.test.tsx  MastermindPage.test.tsx  MazeGeneratorPage.test.tsx  MazeSolverPage.test.tsx  MobileCard.test.tsx  Navbar.test.tsx  PongPage.test.tsx  PortfolioPage.test.tsx  ProgettiPage.test.tsx  PyodideRunner.test.tsx  (+4 more)
(+279 files in other folders)
