[package]
name = "breakout_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["bevy/default"]
# Feature to enable the debug stepping interface
bevy_debug_stepping = []

[dependencies]
bevy = { version = "0.14", features = ["bevy_audio", "vorbis"] }
# web-sys and wasm-bindgen are needed for WASM interop
web-sys = { version = "0.3", features = ["Window"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
